HttpProxy: Use CloseableHttpAsyncClient